Bug 475042 - Stylesheets don't work
Summary: Stylesheets don't work
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: webenginepart (other bugs)
Version First Reported In: Git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-30 10:02 UTC by Heimen Stoffels
Modified: 2023-11-05 09:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heimen Stoffels 2023-09-30 10:02:48 UTC
Stylesheets aren't working in Konqueror for me. Whether I choose my own stylesheet (that works perfectly in Falkon, btw, so there's nothing wrong with the file) or the built-in accessibility stylesheet, none of the options work. Websites just ignore all of the options in the stylesheets.

STEPS TO REPRODUCE
1. Open the Konqueror settings
2. Choose a custom stylesheet or the accessibility stylesheet
3. 

OBSERVED RESULT
None of them are working.

EXPECTED RESULT
They should be working, just like in Falkon.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed with KDE Plasma
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-10-25 18:10:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/246
Comment 2 Stefano Crocco 2023-11-05 09:41:39 UTC
Git commit fb911806cd0261ae7e50e897bff07e425ae6f9bf by Stefano Crocco.
Committed on 05/11/2023 at 10:33.
Pushed by stefanocrocco into branch 'kf6'.

Make WebEnginePart honor user stylesheet settings

A  +15   -0    webenginepart/src/applyuserstylesheet.js
M  +7    -0    webenginepart/src/webenginepage.cpp
M  +10   -0    webenginepart/src/webenginepage.h
M  +1    -0    webenginepart/src/webenginepart.qrc
M  +70   -0    webenginepart/src/webenginepartcontrols.cpp
M  +20   -0    webenginepart/src/webenginepartcontrols.h

https://invent.kde.org/network/konqueror/-/commit/fb911806cd0261ae7e50e897bff07e425ae6f9bf